src/tests/krate/publish/snapshots/integration__krate__publish__basics__new_krate-3.snap
---
source: src/tests/krate/publish/basics.rs
expression: crates
---
[
  {
    "name": "foo_new",
    "vers": "1.0.0",
    "deps": [],
    "cksum": "696b8fc0b2d62c399459b2000dbcab7d9914e5dfafff974f53c1212e02f014bb",
    "features": {},
    "yanked": false,
    "pubtime": "[datetime]"
  }
]
