src/tests/krate/publish/snapshots/integration__krate__publish__basics__new_krate-5.snap
---
source: src/tests/krate/publish/basics.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Successfully published foo_new@1.0.0
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new version of foo_new crate was published by your account (https://crates.io/users/foo) at [0000-00-00T00:00:00Z].

View v1.0.0 here: https://crates.io/crates/foo_new/1.0.0

If you have questions or security concerns, you can contact us at help@crates.io. If you would like to stop receiving these security notifications, you can disable them in your account settings.

--
The crates.io Team
