src/tests/krate/publish/snapshots/integration__krate__publish__basics__new_krate_weird_version-2.snap
---
source: src/tests/krate/publish/basics.rs
expression: response.json()
---
{
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "0.0.0-pre",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_weird",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo_weird/owner_team",
      "owner_user": "/api/v1/crates/foo_weird/owner_user",
      "owners": "/api/v1/crates/foo_weird/owners",
      "reverse_dependencies": "/api/v1/crates/foo_weird/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo_weird/downloads",
      "versions": "/api/v1/crates/foo_weird/versions"
    },
    "max_stable_version": null,
    "max_version": "0.0.0-pre",
    "name": "foo_weird",
    "newest_version": "0.0.0-pre",
    "num_versions": 1,
    "recent_downloads": null,
    "repository": null,
    "trustpub_only": false,
    "updated_at": "[datetime]",
    "versions": null,
    "yanked": false
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
